# tty7

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  plan-issue61-keybindings.md  plan-vertical-tab-sidebar.md
.claude/skills/repomix-reference-tty7/: SKILL.md
.claude/skills/repomix-reference-tty7/references/: files.md  project-structure.md  summary.md  tech-stacks.md
.github/scripts/: bundle-appimage.sh  windows-installer.iss
.github/workflows/: ci.yml  nightly.yml  release.yml
assets/: tty7.icns
docs/: features.md  features.zh-CN.md  prd-ssh-connection-manager.md  ssh-native-architecture.md
src/: main.rs
src/core/: actions.rs  agent_hooks.rs  agent_prompt.rs  cli_agent.rs  config.rs  keychain.rs  mod.rs  osc.rs  proc.rs  session.rs  shells.rs  ssh_config.rs  ssh_profile.rs  update.rs  window_state.rs  worktree.rs
src/daemon/: forward.rs  mod.rs  pane.rs  procinfo.rs  protocol.rs  remote.rs  server.rs  shell_integration.rs  spawn.rs  transport.rs
src/daemon/ssh/: auth.rs  broker.rs  connect.rs  forward.rs  handler.rs  known_hosts.rs  mod.rs  session.rs  sftp.rs
src/terminal/: cmd_editor.rs  completion.rs  element.rs  git_diff.rs  git_status.rs  input.rs  loopback.rs  marks.rs  mod.rs  remote.rs  search.rs  signature.rs  smart_select.rs  view.rs
src/ui/: app.rs  assets.rs  code_editor.rs  diff_overlay.rs  file_tree.rs  forwards.rs  hints.rs  home.rs  keymap.rs  lsp.rs  mod.rs  palette.rs  pane.rs  perf.rs  presets.rs  reorder.rs  right_panel.rs  settings.rs  sftp.rs  ssh_connect.rs  ssh_prompt.rs  tab_sidebar.rs  tab_strip.rs  theme.rs  worktree_prompt.rs
src/ui/tray/: icon.rs  mod.rs  native.rs  sni.rs
